--- a/package.json
+++ b/package.json
@@ -10,7 +10,8 @@
     "start": "node dist/index.js"
   },
   "dependencies": {
-    "express": "^5.1.0"
+    "express": "^5.1.0",
+    "grammy": "^1.36.1"
   },
   "devDependencies": {
     "@types/express": "^5.0.1",
